--- a/src/font-family.css
+++ b/src/font-family.css
@@ -1,15 +1,7 @@
 @font-face {
-  font-family: "Pretendard";
+  font-family: "Pretendard-Regaular";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
     format("woff");
   font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Pretendard-bold";
-  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
-    format("woff");
-  font-weight: 700;
   font-style: normal;
 }
